--- a/saleapp/templates/index.html
+++ b/saleapp/templates/index.html
@@ -1,41 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chủ</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-</head>
-<body>
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">E-COMMERCE WEBSITE</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="/">Trang chủ</a>
-                </li>
-                {%for c in cates%}
-                <li class="nav-item">
-                    <a class="nav-link" href="/?cate={{c.id}}">{{c.name}}</a>
-                </li>
-                {%endfor%}
-            </ul>
-            <form class="d-flex" method="get">
-                <input class="form-control me-2" type="text" placeholder="Tìm sản phẩm..." name ="q">
-                <button class="btn btn-primary" type="submit">Tìm</button>
-            </form>
-        </div>
-    </div>
-</nav>
+{%extends 'layout/base.html'%}
 
-<div class = "container">
+{%block content%}
+<body>
+
+<div class="container">
     <div class="row">
         {%for p in products%}
         <div class="col-md-3 col-12" style="padding: 0.7rem">
@@ -53,5 +21,7 @@
     </div>
 </div>
 
+
 </body>
-</html>
+
+{%endblock%}
