--- a/saleapp/templates/index.html
+++ b/saleapp/templates/index.html
@@ -1,27 +1,27 @@
 {%extends 'layout/base.html'%}
 
 {%block content%}
-<body>
 
-<div class="container">
-    <div class="row">
-        {%for p in products%}
-        <div class="col-md-3 col-12" style="padding: 0.7rem">
-            <div class="card">
-                <img class="card-img-top" src="{{p.image}}" alt="{{p.name}}">
-                <div class="card-body">
-                    <h4 class="card-title">{{p.name}}</h4>
-                    <p class="card-text">{{p.price}}</p>
-                    <a href="/products/{{p.cate_id}}" class="btn btn-primary">Xem chi tiết</a>
-                    <a href="#" class="btn btn-danger">Đặt hàng</a>
-                </div>
+<ul class="pagination mt-3">
+    {%for i in range(1, 5)%}
+    <li class="page-item"><a class="page-link" href="/?page={{i}}">{{i}}</a></li>
+    {%endfor%}
+</ul>
+
+<div class="row">
+    {%for p in products%}
+    <div class="col-md-3 col-12" style="padding: 0.7rem">
+        <div class="card">
+            <img class="card-img-top" src="{{p.image}}" alt="{{p.name}}">
+            <div class="card-body">
+                <h4 class="card-title">{{p.name}}</h4>
+                <p class="card-text">{{p.price}}</p>
+                <a href="/products/{{p.cate_id}}" class="btn btn-primary">Xem chi tiết</a>
+                <a href="#" class="btn btn-danger">Đặt hàng</a>
             </div>
         </div>
-        {%endfor%}
     </div>
-</div>
+    {%endfor%}
 
 
-</body>
-
-{%endblock%}
+    {%endblock%}
