--- a/saleapp/templates/product-details.html
+++ b/saleapp/templates/product-details.html
@@ -1,7 +1,13 @@
 {%extends 'layout/base.html'%}
-
+{%block title%}Chi tiết sản phẩm {%endblock%}
 {%block content%}
-
-{{prod}}
-
+    <div class = "row mt-3">
+        <div class ="col-md-5 col-12">
+            <img src = "{{prod.image}}" class="card-img-top">
+        </div>
+        <div class ="col-md-7 col-12">
+            <h3 class = "text-info">{{prod.name}}</h3>
+            <h4 class = "text danger">{{"{:,.0f}".format(prod.price)}}</h4>
+        </div>
+    </div>
 {%endblock%}
