--- a/saleapp/templates/index.html
+++ b/saleapp/templates/index.html
@@ -3,7 +3,7 @@
 {%block content%}
 
 <ul class="pagination mt-3">
-    {%for i in range(1, 5)%}
+    {%for i in range(1, pages+1)%}
     <li class="page-item"><a class="page-link" href="/?page={{i}}">{{i}}</a></li>
     {%endfor%}
 </ul>
