--- a/saleapp/templates/layout/header.html
+++ b/saleapp/templates/layout/header.html
@@ -11,9 +11,12 @@
                 </li>
                 {%for c in cates%}
                 <li class="nav-item">
-                    <a class="nav-link" href="/?cate={{c.id}}">{{c.name}}</a>
+                    <a class="nav-link" href="/?cate_id={{c.id}}">{{c.name}}</a>
                 </li>
                 {%endfor%}
+                 <li class="nav-item">
+                    <a class="nav-link active" href="/login">&#128105;Đăng nhập</a>
+                </li>
             </ul>
             <form class="d-flex" method="get">
                 <input class="form-control me-2" type="text" placeholder="Tìm sản phẩm..." name="q">
