--- a/saleapp/templates/index.html
+++ b/saleapp/templates/index.html
@@ -2,11 +2,13 @@
 
 {%block content%}
 
+{% if pages>1%}
 <ul class="pagination mt-3">
     {%for i in range(1, pages+1)%}
     <li class="page-item"><a class="page-link" href="/?page={{i}}">{{i}}</a></li>
     {%endfor%}
 </ul>
+{% endif%}
 
 <div class="row">
     {%for p in products%}
