--- a/saleapp/templates/product-details.html
+++ b/saleapp/templates/product-details.html
@@ -8,6 +8,7 @@
         <div class ="col-md-7 col-12">
             <h3 class = "text-info">{{prod.name}}</h3>
             <h4 class = "text danger">{{"{:,.0f}".format(prod.price)}}</h4>
+            <h4 class = "text-info">{{prod.description|safe}}</h4>
         </div>
     </div>
 {%endblock%}
