--- a/saleapp/templates/layout/header.html
+++ b/saleapp/templates/layout/header.html
@@ -29,6 +29,10 @@
                 <li class="nav-item">
                     <a class="nav-link active" href="/login">&#128105;Đăng nhập</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link active" href="/register">&#128105;Đăng ký</a>
+                </li>
                 {% endif %}
 
             </ul>
