--- a/saleapp/templates/layout/header.html
+++ b/saleapp/templates/layout/header.html
@@ -35,6 +35,10 @@
                 </li>
                 {% endif %}
 
+                <li class="nav-item">
+                    <a class="nav-link active" href="/register">&#128105;Giỏ hàng</a>
+                </li>
+
             </ul>
             <form class="d-flex" method="get">
                 <input class="form-control me-2" type="text" placeholder="Tìm sản phẩm..." name="q">
