--- a/saleapp/templates/layout/header.html
+++ b/saleapp/templates/layout/header.html
@@ -34,6 +34,9 @@
                     <a class="nav-link active" href="/register">&#128105;Đăng ký</a>
                 </li>
                 {% endif %}
+                 <li class="nav-item">
+                    <a class="nav-link active" href="/cart">&#128722;<span class="badge bg-danger">0</span></a>
+                </li>
 
             </ul>
             <form class="d-flex" method="get">
